# StreamMonitor

./: .env.example  .gitignore  .stylelintrc.json  README.md  app.py  auth.py  config.py  errors.py  eslint.config.js  health.py  main.py  package-lock.json  package.json  perms.py  pyproject.toml  stats.py  streammonitor.spec
.github/workflows/: lint.yml  pages.yml  release.yml
core/: __init__.py  auth.py  config.py  errors.py  health.py  logging_config.py  perms.py  process.py
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT.md
frontend/: index.html  playwright.config.ts  postcss.config.js  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/features/: diagnosticPanels.tsx
frontend/tests/: responsive.spec.ts
routes/: aiostreams.py  benchmark.py  dmesg.py  jellyfin.py  mediafusion.py  packages.py  processes.py  public.py  speedtest.py
scripts/: build.sh  install-service.sh
static/app/: index.html  site.webmanifest
static/app/assets/: index-6O3NXsE-.css  index-BUrafNBL.js  index-CJpvwXL_.js  index-Clzy8zrG.css  index-Cpt75WuU.css  index-DYcIkPKT.css  index-DZ0OvIOi.css  index-JDc3A1jj.js  index-eNeCq3eL.js  index-y96hof2p.js
static/css/: login.css  main.css  speedtest.css
static/js/: dashboard.js  login.js  speedtest.js
stats/: __init__.py  base.py  collectors.py  github.py  gpu_nvidia.py  process_metrics.py  system.py
templates/: dashboard.html  login.html  speedtest.html
